sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: not found: value jetValeur
		if (getValeur(j)>jetValeur(j+1)){echange(j,j+1)}
                                 ^