sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {

for(i <- getNombreValeurs() to 0){
	for(j <- 0 to i){
		if (getValeur(j)>jetValeur(j+1)){echange(j,j+1)}
	}
}
}
